# itersys

./: .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  pyproject.toml  setup.cfg
itersys/: __init__.py  algorithms.py  combinatorics.py  iteration.py  utils.py
tests/: __init__.py  test_algorithms.py  test_combinatorics.py  test_iteration.py  test_utils.py
