[metadata]
name = itersys
version = 0.1.0
description = A lightweight Python library providing one-line iterator and algorithm helpers
long_description = file: README.md
long_description_content_type = text/markdown
author = Itersys Contributors
author_email = maintainers@itersys.dev
license = MIT
license_files = LICENSE
url = https://github.com/bappy-3/itersys
project_urls =
    Homepage = https://github.com/bappy-3/itersys
    Documentation = https://github.com/bappy-3/itersys#readme
    Repository = https://github.com/bappy-3/itersys
    Issues = https://github.com/bappy-3/itersys/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =

[options.extras_require]
dev =
    pytest>=7.0.0

[options.entry_points]
console_scripts =
    itersys = cli:main
